--- a/final_results.ipynb
+++ b/final_results.ipynb
@@ -32,7 +32,20 @@
     "\n",
     "data_paths = [os.path.join(data_location, data_file) for data_file in possible_data_files]\n",
     "\n",
-    "data_path = data_paths[1]"
+    "CHOSEN_TASK = 1\n",
+    "data_path = data_paths[CHOSEN_TASK]\n",
+    "\n",
+    "\n",
+    "test_data_files = [\"hackathon_low_mixed_venous_oximetry_test_set.csv\", \"hackathon_low_cardiac_output_test_set.csv\"]\n",
+    "\n",
+    "df_test_new = os.path.join(data_location, test_data_files[CHOSEN_TASK])\n",
+    "df_test_new = pd.read_csv(df_test_new)\n",
+    "\n",
+    "df_test_new = (\n",
+    "    df_test_new\n",
+    "    .assign(ClassificationLabel = lambda df: df.ClassificationLabel==\"Positive\")\n",
+    "    .assign(gender=lambda df:df.gender==\"F\")\n",
+    ")"
    ]
   },
   {
@@ -82,7 +95,8 @@
     "\n",
     "if 'cardiac_output' in data_path:\n",
     "    regression_label = \"RegressionLabel-CardiacIndex\"\n",
-    "#     df_raw = df_raw.loc[lambda df: (df.apply(lambda df: fun(df), axis = 1) - df.bsa) < 0.1]\n",
+    "#     remove data with wrong BSA\n",
+    "    df_raw = df_raw.loc[lambda df: (df.apply(lambda df: fun(df), axis = 1) - df.bsa) < 0.1]\n",
     "else:\n",
     "    regression_label = \"RegressionLabel-SvO2\""
    ]
@@ -186,8 +200,8 @@
     "means = df[mean_columns].groupby(\"subject_id\").mean()\n",
     "\n",
     "FILL_IN = \"overall_mean\"\n",
-    "FILL_IN = \"drop\"\n",
-    "FILL_IN = \"patient_mean\"\n",
+    "# FILL_IN = \"drop\"\n",
+    "# FILL_IN = \"patient_mean\"\n",
     "# FILL_IN = \"keep\"\n",
     "\n",
     "if FILL_IN == \"patient_mean\":\n",
@@ -214,83 +228,6 @@
     "    \n",
     "    \n",
     "means = means.add_suffix('___mean')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Fixing obvious outliers\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for col in feature_columns:\n",
-    "#     print(col)\n",
-    "#     if col != 'gender':\n",
-    "#         df[col].hist(bins=50)\n",
-    "#         plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %matplotlib inline\n",
-    "# for col in feature_columns:\n",
-    "#     print(col)\n",
-    "#     if col != 'gender':\n",
-    "#         df[col].dropna().hist(bins=30)\n",
-    "#         plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hideCode": false,
-    "hidePrompt": false
-   },
-   "outputs": [],
-   "source": [
-    "# import sklearn.covariance\n",
-    "# env = sklearn.covariance.EllipticEnvelope()\n",
-    "\n",
-    "# env.fit(df[feature_columns].values)\n",
-    "\n",
-    "# outliers = env.predict(df[feature_columns].values)\n",
-    "# df = df.loc[outliers==1]\n",
-    "\n",
-    "# print(f\"Dropping {sum(outliers==-1)} outliers keeping {len(df)}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Aggregation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "means_for_aggregation = means.copy()\n",
-    "aggregated_df = pd.merge(df, means, on='subject_id')\n",
-    "aggregated_columns = []\n",
-    "for col in feature_columns:\n",
-    "    mean_column_name = col + '___mean'\n",
-    "    if mean_column_name in aggregated_df.columns:\n",
-    "        aggregated_df[col + '___average_diff'] = aggregated_df[col] - aggregated_df[mean_column_name]\n",
-    "        aggregated_columns.append(col + '___average_diff')"
    ]
   },
   {
@@ -336,7 +273,7 @@
     "hidePrompt": false
    },
    "source": [
-    "# Classification"
+    "# Model training High risk"
    ]
   },
   {
@@ -349,12 +286,134 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "thres = 2.4\n",
+    "threshold_training = 2.6\n",
+    "threshold_validation_test = 2.4\n",
+    "thresh = threshold_validation_test\n",
     "X = df_train[feature_columns].values\n",
-    "y = df_train[regression_label]<thres\n",
+    "y = df_train[regression_label]<threshold_training\n",
     "\n",
-    "X_test = df_test[feature_columns].values\n",
-    "y_test = df_test[regression_label]<thres"
+    "X_val = df_test[feature_columns].values\n",
+    "y_val = df_test[regression_label]<threshold_validation_test\n",
+    "\n",
+    "\n",
+    "X_test = df_test_new[feature_columns].values\n",
+    "y_test = df_test_new[regression_label]<threshold_validation_test\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn import tree\n",
+    "import xgboost\n",
+    "# clf = tree.DecisionTreeClassifier(max_depth=2)\n",
+    "clf = xgboost.XGBClassifier(scale_pos_weight=1,\n",
+    "                            max_depth=2,\n",
+    "                            subsample=1,\n",
+    "                            colsample_bytree=1,\n",
+    "                            min_child_weight=40\n",
+    "                           )\n",
+    "clf = clf.fit(X,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from yellowbrick.classifier import ClassBalance, ROCAUC, ClassificationReport, ClassPredictionError\n",
+    "\n",
+    "clf.target_type_ = int\n",
+    "rocauc = ROCAUC(clf, size=(700, 500), classes=[0,1])\n",
+    "\n",
+    "rocauc.score(X_test, y_test)  \n",
+    "r = rocauc.poof()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "THRESHOLD = 0.046\n",
+    "y_test_predict = clf.predict_proba(X_test)[:,0] < THRESHOLD\n",
+    "import sklearn.metrics as metrics\n",
+    "conf_matrix = metrics.confusion_matrix(y_test, y_test_predict)\n",
+    "conf_df = pd.DataFrame(conf_matrix,\n",
+    "            index=[f\"label_{i}\" for i in range(0, max(y_test)+1)],\n",
+    "            columns=[f\"pred_{i}\" for i in range(0, max(y_test)+1)])\n",
+    "conf_df.loc[\"label_0\"] = 10*conf_df.loc[\"label_0\"]\n",
+    "conf_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict = clf.predict_proba(df[feature_columns].values)[:,0] < THRESHOLD\n",
+    "\n",
+    "high_risk_patients = df.loc[predict]\n",
+    "print(f\"Number of high risk in whole data {len(high_risk_patients)}\")\n",
+    "print(f\"Number of mistakes {(high_risk_patients[regression_label]>thres).sum()*10}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "high_risk_patients_summary = suspicious_pacients[feature_columns].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
+   "source": [
+    "# Model training low risk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "threshold_training = 2.7\n",
+    "threshold_validation_test = 2.4\n",
+    "thresh = threshold_validation_test\n",
+    "X = df_train[feature_columns].values\n",
+    "y = df_train[regression_label]<threshold_training\n",
+    "\n",
+    "X_val = df_test[feature_columns].values\n",
+    "y_val = df_test[regression_label]<threshold_validation_test\n",
+    "\n",
+    "\n",
+    "X_test = df_test_new[feature_columns].values\n",
+    "y_test = df_test_new[regression_label]<threshold_validation_test\n"
    ]
   },
   {
@@ -399,7 +458,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "THRESHOLD = 0.2\n",
+    "THRESHOLD = 0.7\n",
     "y_test_predict = clf.predict_proba(X_test)[:,0] < THRESHOLD\n",
     "import sklearn.metrics as metrics\n",
     "conf_matrix = metrics.confusion_matrix(y_test, y_test_predict)\n",
@@ -416,11 +475,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predict = clf.predict_proba(df[feature_columns].values)[:,0] < THRESHOLD\n",
-    "\n",
+    "predict = clf.predict_proba(df[feature_columns].values)[:,0] > THRESHOLD\n",
     "suspicious_pacients = df.loc[predict]\n",
-    "\n",
-    "print(f\"Number of mistakes {(suspicious_pacients[regression_label]>thres).sum()}\")"
+    "print(f\"number of identified {len(suspicious_pacients)*10}\")\n",
+    "print(f\"Number of mistakes {(suspicious_pacients[regression_label]<thresh).sum()}\")"
    ]
   },
   {
@@ -429,207 +487,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "comparison = suspicious_pacients[feature_columns].mean().to_frame()\n",
+    "comparison = suspicious_pacients[feature_columns].mean().to_frame(name=\"suspicuos_negative\")\n",
     "\n",
-    "comparison[\"rest_positive\"] = df_test[feature_columns].loc[~predict & (df[regression_label]<thres)].mean()\n",
     "comparison[\"rest_negative\"] = df_test[feature_columns].loc[~predict & (df[regression_label]>thres)].mean()\n",
-    "\n",
+    "comparison[\"rest_positive\"] = df_test[feature_columns].loc[~predict & (df[regression_label]<thres)].mean()\n",
+    "comparison[\"suspicious_positive\"] = series_bad\n",
+    " \n",
     "comparison"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hideCode": false,
-    "hidePrompt": false
-   },
-   "source": [
-    "# Regression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hideCode": false,
-    "hidePrompt": false
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "X = df_train[feature_columns].values\n",
-    "y = df_train[regression_label]\n",
-    "\n",
-    "X_test = df_test[feature_columns].values\n",
-    "y_test = df_test[regression_label]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hideCode": false,
-    "hidePrompt": false
-   },
-   "outputs": [],
-   "source": [
-    "clf = sklearn.linear_model.Lasso(alpha=0.1, fit_intercept=True,\n",
-    "                                 normalize=True, precompute=False, copy_X=True,\n",
-    "                                 max_iter=1000, tol=0.0001, warm_start=False,\n",
-    "                                 positive=False, random_state=True, selection='cyclic')\n",
-    "\n",
-    "clf = sklearn.linear_model.LinearRegression()\n",
-    "from sklearn.ensemble import GradientBoostingRegressor\n",
-    "clf = GradientBoostingRegressor(max_depth=2, subsample=1)\n",
-    "\n",
-    "\n",
-    "# clf = sklearn.svm.SVR()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hideCode": false,
-    "hidePrompt": false
-   },
-   "outputs": [],
-   "source": [
-    "clf.fit(X,y)\n",
-    "y_pred = clf.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hideCode": false,
-    "hidePrompt": false
-   },
-   "outputs": [],
-   "source": [
-    "sklearn.metrics.mean_squared_error(y_test, y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hideCode": false,
-    "hidePrompt": false
-   },
-   "outputs": [],
-   "source": [
-    "plt.scatter(y_test, y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_test = df_test[regression_label]<2.4\n",
-    "y_test_predict = y_pred<3.2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sklearn.metrics as metrics\n",
-    "conf_matrix = metrics.confusion_matrix(y_test, y_test_predict)\n",
-    "pd.DataFrame(conf_matrix,\n",
-    "            index=[f\"label_{i}\" for i in range(0, max(y_test)+1)],\n",
-    "            columns=[f\"pred_{i}\" for i in range(0, max(y_test)+1)])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hideCode": false,
-    "hidePrompt": false
-   },
-   "source": [
-    "# Dimensionality Reduction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hideCode": false,
-    "hidePrompt": false
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "import sklearn.manifold"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ff = feature_columns.copy()\n",
-    "ff.remove('gender')\n",
-    "\n",
-    "X_for_pca = df[ff].values\n",
-    "y_for_pca = df.ClassificationLabel.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hideCode": false,
-    "hidePrompt": false
-   },
-   "outputs": [],
-   "source": [
-    "pca = PCA(n_components=3)\n",
-    "# pca = sklearn.manifold.TSNE(n_components=3)\n",
-    "\n",
-    "scaler = MinMaxScaler()\n",
-    "scaler.fit(X_for_pca)\n",
-    "X_normalized = scaler.transform(X_for_pca)\n",
-    "\n",
-    "pca.fit(X_normalized)\n",
-    "X_pca = pca.fit_transform(X_normalized)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hideCode": false,
-    "hidePrompt": false
-   },
-   "outputs": [],
-   "source": [
-    "%matplotlib notebook\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.colors import ListedColormap, LinearSegmentedColormap\n",
-    "\n",
-    "cm = plt.cm.get_cmap('RdYlBu')\n",
-    "top = plt.cm.get_cmap('Oranges_r', 60)\n",
-    "bottom = plt.cm.get_cmap('Blues', 100)\n",
-    "\n",
-    "\n",
-    "\n",
-    "xx = X_pca[:,0]\n",
-    "yy = X_pca[:,1]\n",
-    "zz = X_pca[:, 2]\n",
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111, projection='3d')\n",
-    "\n",
-    "ax.scatter(xx,yy,zz,c=y_for_pca, alpha=1, vmin=0, vmax=y.max(), cmap=newcmp, marker = 'o')\n",
-    "# plt.colorbar(aa)"
    ]
   },
   {
