--- a/final_results.ipynb
+++ b/final_results.ipynb
@@ -349,15 +349,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "25/35"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "THRESHOLD = 0.044\n",
     "y_test_predict = clf.predict_proba(X_test)[:,0] < THRESHOLD\n",
     "import sklearn.metrics as metrics\n",
@@ -379,7 +370,7 @@
     "\n",
     "high_risk_patients = df.loc[predict]\n",
     "print(f\"Number of high risk in whole data {len(high_risk_patients)}\")\n",
-    "print(f\"Number of mistakes {(high_risk_patients[regression_label]>thres).sum()*10}\")"
+    "print(f\"Number of mistakes {(high_risk_patients[regression_label]>thresh).sum()*10}\")"
    ]
   },
   {
@@ -388,7 +379,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "high_risk_patients_summary = suspicious_pacients[feature_columns].mean()"
+    "high_risk_patients_summary = high_risk_patients[feature_columns].mean()"
    ]
   },
   {
@@ -498,12 +489,19 @@
    "source": [
     "comparison = suspicious_pacients[feature_columns].mean().to_frame(name=\"suspicuos_negative\")\n",
     "\n",
-    "comparison[\"rest_negative\"] = df_test[feature_columns].loc[~predict & (df[regression_label]>thres)].mean()\n",
-    "comparison[\"rest_positive\"] = df_test[feature_columns].loc[~predict & (df[regression_label]<thres)].mean()\n",
-    "comparison[\"suspicious_positive\"] = series_bad\n",
+    "comparison[\"rest_negative\"] = df_test[feature_columns].loc[~predict & (df[regression_label]>thresh)].mean()\n",
+    "comparison[\"rest_positive\"] = df_test[feature_columns].loc[~predict & (df[regression_label]<thresh)].mean()\n",
+    "comparison[\"suspicious_positive\"] = high_risk_patients_summary\n",
     " \n",
     "comparison"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
